cmake_minimum_required(VERSION 3.10)
project(EarthDemo)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_CXX_STANDARD 11)
set(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)
include_directories(${INCLUDE_PATH})
set(LIBRARY_PATH ${PROJECT_SOURCE_DIR}/bin)
link_directories(${LIBRARY_PATH})
add_executable(EarthDemo main.cpp library/stb_image.cpp library/GLUtils.cpp library/Circle.h)
target_link_libraries(EarthDemo glew32 glfw3 opengl32)